Fix Tutorial Spacing

--- a/app/assets/styles/modules/_container.css
+++ b/app/assets/styles/modules/_container.css
@@ -1,4 +1,4 @@
-/*.container {
+.container {
 
 	width: 700px;
 	margin: auto;
@@ -29,4 +29,4 @@
 	}
 
 
-}*/
+}
