--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -54,7 +54,7 @@
 	}
 
 	&--about {
-		margin-top: 60px;
+		margin-top: 90px;
 		color: $htMediumGreen;
 
 		@mixin atSmall {
