--- a/app/assets/styles/modules/_tutorials.css
+++ b/app/assets/styles/modules/_tutorials.css
@@ -15,7 +15,7 @@
 			margin-bottom: 190px;
 
 			a {
-				margin: 10px 0px;
+				margin: 20px 0px;
 			}
 
 			img {
